# innowise_laboratory

lecture_1/my_project/: pyproject.toml
lecture_2/mini-profile-generator/: main.py  pyproject.toml
lecture_3/student-grade-analyzer/: main.py  pyproject.toml
lecture_4/: queries.sql  school.db
lecture_5/book_api/: .gitignore  pyproject.toml
lecture_5/book_api/app/: db.py  dependencies.py  main.py
lecture_5/book_api/app/models/: books.py
lecture_5/book_api/app/routers/: books.py
lecture_5/book_api/app/schemas/: books.py
